# ProtoMarketMaker

./: .env.paperbroker.example  .env.redis.example  .gitignore  README.md  backtesting.py  conftest.py  evaluation.py  iterative_backtesting.py  optimization.py  pyproject.toml  requirements.txt  utils.py  utils_compat.py
.plutus/: manifest.yaml
backtesting/: __init__.py  comparison.py  data_feed.py  data_preparation.py  engine.py  runner.py
config/: config.py  paperbroker_config.json  redis_config.json
connectors/: __init__.py  paperbroker_connector.py
core/: README.md  enums.py  event.py  order.py  position.py
data/: redis_stream.py
docs/: CONFIG_GUIDE.md  CONTRACT_RESOLUTION_GUIDE.md
docs/superpowers/plans/: 2026-06-28-protomarketmaker-canonical-restructure.md
docs/superpowers/specs/: 2026-06-28-protomarketmaker-canonical-restructure-design.md
engine/: README.md  execution.py  oms.py  paperbroker_execution.py  portfolio.py  risk.py  strategy.py
evaluation/: monitor.py
examples/: README.md  audit_redis_handler.py  core-engine-architecture-guide.ipynb  live_mode_example.py  paper-trading-demo.ipynb  playback_mode_example.py  redis-paper-trading-demo.ipynb  redis-streaming-demo.ipynb
metrics/: metric.py
paper_trading/: README.md  audit_logger.py  engine.py  flashy_logger.py  main.py  recorder.py  redis_session.py  results.py  runner.py  session.py
papertrade/: README.md  paper.cfg  paper.py  paperbroker_client-0.1.4-py3-none-any.whl
parameter/: backtesting_parameter.json  optimization_parameter.json  optimized_parameter.json
results/: demo_session.json  dual_file_test.json  test.json
scripts/: backtest.py  evaluate.py  iterative_backtest.py  load_data.py  optimize.py  visualize_prices.py
src/proto_market_maker/: __init__.py  backtest.py  data_loader.py  evaluate.py  optimize.py
src/proto_market_maker/database/: data_service.py
src/protomarketmaker/: __init__.py  __version__.py
src/protomarketmaker.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/protomarketmaker/backtesting/: __init__.py  engine.py  (+4 more)
tests/: README.md  test_smoke.py
tests/backtesting/: test_data_feed.py  test_engine.py
tests/connectors/: test_paperbroker_connector.py
tests/core/: test_event.py  test_order.py  test_position.py
tests/data/: test_redis_stream.py
tests/engine/: test_execution.py  test_oms.py  test_portfolio.py  test_risk.py  test_strategy.py
tests/evaluation/: test_monitor.py
tests/integration/: test_end_to_end.py  test_live_mode_e2e.py  test_paper_trading_integration.py  test_paperbroker_integration.py  test_playback_mode_e2e.py  test_redis_end_to_end.py
tests/paper_trading/: __init__.py  test_engine.py  test_recorder.py  test_redis_session.py  test_results.py  test_session.py
tests/tools/: test_redis_publisher.py
tests/utils/: test_contract_resolver.py
tools/: README.md  color_scheme_preview.py  create_all_dual_file_samples.py  create_sample_data_from_merged.py  redis_publisher.py  run_ground_truth_tests.py  verify_paperbroker_connection.py  verify_redis_connection.py  verify_sample_data_integrity.py
utils/: contract_resolver.py
(+40 files in other folders)
